2000-05-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99j

2000-05-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/ntptime.htm: More fixes
	From: Kazu TAKAMUNE <takamune@avrl.mei.co.jp>

2000-05-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build (KEYSUF): 
	* flock-build: 
	* configure.in: Lose the "md5" options from the --with-crypto
	check; Dave hates it.

	* ntpd/ntp_util.c (stats_config): 
	* ntpd/ntp_loopfilter.c (loop_config): 
	* libntp/systime.c (adj_systime): 
	* include/ntp_proto.h (NTP_MAXFREQ):
	Renamed MAX_FREQ to NTP_MAXFREQ

	* ntpd/ntpd.c (ntpdmain): 
	* ntpd/ntp_proto.c (receive): 
	(poll_update): 
	* ntpd/ntp_intres.c (addentry): 
	* ntpd/ntp_config.c (getconfig): 
	Lint cleanup
	From: Marc Brett <mbrett@rgs0.london.waii.com>

	* include/ntp_stdlib.h: 
	* libntp/systime.c (adj_systime): 
	* ntpd/ntp_loopfilter.c (loop_config): 
	* ntpd/ntp_util.c (stats_config): 
	* ports/winnt/ntpd/nt_clockstuff.c (adj_systime): 
	MAXFREQ -> MAX_FREQ
	* include/ntp_proto.h: Define MAX_FREQ

2000-05-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntp_stdlib.h: 
	* libntp/systime.c (adj_systime): 
	* ntpd/ntp_loopfilter.c (loop_config): 
	* ntpd/ntp_util.c (stats_config): 
	* ports/winnt/ntpd/nt_clockstuff.c (adj_systime): 
	sys_maxfreq -> MAXFREQ
	Per Dave Mills.

2000-05-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acinclude.m4: Typo...

2000-05-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/gpstolfp.c (GPSORIGIN): Try new ULONG_CONST macro

	* ntpdate/ntptimeset.c: 
	* ntpdate/ntpdate.h: 
	* ntpd/refclock_oncore.c (oncore_msg_En): 
	* ntpd/ntp_util.c (stats_config): 
	* ntpd/ntp_request.c: 
	* ntpd/ntp_intres.c (findhostaddr): 
	* ntpd/ntp_config.c (getconfig): 
	* libntp/systime.c (adj_systime): 
	* libntp/lib_strbuf.c: 
	* libntp/authparity.c: 
	* libntp/audio.c:
	Header/lint cleanup
	From/reported by: Simon Burge <simonb@netbsd.org>

	* ntpd/ntp_resolver.c (findhostaddr): Compiler noise cleanup
